fix align and borders true

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -16,7 +16,7 @@
   width: 56px;
   border-radius: 50%;
 }
-.avatar-bordered img {
+.avatar-bordered {
   width: 120px;
   height: 120px; 
   border-radius: 50%;
